[package]
name = "tmux-otg"
version = "0.0.2"
edition = "2024"
description = "Read-only HTTP server that tails allowlisted tmux sessions over SSE"
license = "MIT"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["macros"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
# `ServiceExt::oneshot` for driving the router in handler integration tests.
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
strip = true
